--- a/index.html
+++ b/index.html
@@ -14,44 +14,63 @@
     <link
         href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
-
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
+
     <!-- Header com navegação -->
+
     <header class="header">
+
         <div class="container">
+
             <div class="header-content">
-                <h1 class="logo">Guilherme Santos</h1>
+
+                <h1 class="logo">Guilherme Santos.</h1>
+
                 <!-- Menu de navegação -->
+
                 <nav class="nav">
+
                     <button class="nav-toggle" id="navToggle" aria-label="Abrir menu">
                         <span></span>
                         <span></span>
                         <span></span>
                     </button>
+
                     <ul class="nav-list" id="navList">
                         <li><a href="#sobre" data-translate="nav-about">Sobre</a></li>
                         <li><a href="#projetos" data-translate="nav-projects">Projetos</a></li>
                         <li><a href="#habilidades" data-translate="nav-skills">Habilidades</a></li>
                         <li><a href="#contato" data-translate="nav-contact">Contato</a></li>
+                        <li>
+                            <!-- Botão de alternância de idioma -->
+                            <a href="#">
+                            <button class="language-toggle" id="languageToggle" aria-label="Alternar idioma">
+                                <span class="lang-option active" data-lang="pt">PT</span>
+                                <span class="lang-separator">|</span>
+                                <span class="lang-option" data-lang="en">EN</span>
+                            </button>
+                            </a>
+                        </li>
                     </ul>
-                    <!-- Botão de alternância de idioma -->
-                    <button class="language-toggle" id="languageToggle" aria-label="Alternar idioma">
-                        <span class="lang-option active" data-lang="pt">PT</span>
-                        <span class="lang-separator">|</span>
-                        <span class="lang-option" data-lang="en">EN</span>
-                    </button>
+
                 </nav>
             </div>
+
         </div>
+
     </header>
 
     <main>
+
         <!-- Seção Sobre -->
+
         <section id="sobre" class="section about">
+
             <div class="container">
+
                 <div class="about-content">
                     <div class="about-text">
                         <h2 data-translate="about-title">Sobre Mim</h2>
@@ -69,14 +88,21 @@
                         <img src="./assets/profile.jpg" alt="Foto de perfil de Guilherme" class="profile-img">
                     </div>
                 </div>
+
             </div>
+
         </section>
 
         <!-- Seção Projetos -->
+
         <section id="projetos" class="section projects">
+
             <div class="container">
+
                 <h2 data-translate="projects-title">Projetos</h2>
+
                 <div class="projects-grid">
+
                     <article class="project-card">
                         <h3 data-translate="project1-title">Sistema de E-commerce</h3>
                         <p data-translate="project1-description">
@@ -106,15 +132,22 @@
                         </div>
                         <a href="#" class="project-link" data-translate="project-link">Ver Projeto →</a>
                     </article>
+
                 </div>
             </div>
+
         </section>
 
         <!-- Seção Habilidades -->
+
         <section id="habilidades" class="section skills">
+
             <div class="container">
+
                 <h2 data-translate="skills-title">Habilidades</h2>
+
                 <div class="skills-grid">
+
                     <div class="skill-category">
                         <h3 data-translate="skills-backend">Backend</h3>
                         <ul class="skills-list">
@@ -156,14 +189,21 @@
                             <li>Jira</li>
                         </ul>
                     </div>
-                </div>
-            </div>
-        </section>
 
-        <!-- Seção Contato -->
+                </div>
+
+            </div>
+
+        </section> 
+
+        <!-- Seção Contato --->
+
         <section id="contato" class="section contact">
+
             <div class="container">
+
                 <h2 data-translate="contact-title">Contato</h2>
+
                 <div class="contact-content">
                     <div class="contact-info">
                         <p data-translate="contact-description">
@@ -191,22 +231,28 @@
                         <button type="submit" class="submit-btn" data-translate="form-submit">Enviar Mensagem</button>
                     </form>
 
-                    <!-- Mensagem de sucesso -->
                     <div class="success-message" id="successMessage">
                         <p data-translate="form-success">✓ Mensagem enviada com sucesso! Entrarei em contato em breve.
                         </p>
                     </div>
+
                 </div>
+
             </div>
+
         </section>
+
     </main>
 
     <!-- Footer -->
+
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
                 <p data-translate="footer-copyright">&copy; 2025 Guilherme Santos. Todos os direitos reservados.</p>
+
                 <div class="social-links">
+
                     <a href="https://github.com/guilhermexL" target="_blank" rel="noopener noreferrer"
                         aria-label="GitHub">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
@@ -214,6 +260,7 @@
                                 d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
                         </svg>
                     </a>
+
                     <a href="https://linkedin.com/in/guilhermee-santos" target="_blank" rel="noopener noreferrer"
                         aria-label="LinkedIn">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
@@ -221,12 +268,14 @@
                                 d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z" />
                         </svg>
                     </a>
+
                 </div>
+
             </div>
         </div>
     </footer>
 
     <script src="/js/script.js"></script>
-</body>
 
+</body>
 </html>
