fix: corrigindo botão de troca de idiomas

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="header-content">
 
-                <h1 class="logo">Guilherme Santos.</h1>
+                <h1 class="logo">Guilherme.</h1>
 
                 <!-- Menu de navegação -->
 
@@ -76,7 +76,6 @@
             <div class="container">
 
                 <div class="about-content">
-
                     <div class="about-text">
                         <h2 data-translate="about-title">Sobre Mim</h2>
                         <p data-translate="about-description">
@@ -162,18 +161,18 @@
                 <div class="projects-grid">
 
                     <article class="project-card">
-                        <h3 data-translate="project1-title">Sistema de E-commerce</h3>
+                        <h3 data-translate="project1-title">FanPage do Corinthians</h3>
                         <p data-translate="project1-description">
-                            Plataforma completa de e-commerce desenvolvida com Spring Boot, PostgreSQL e AWS.
-                            Inclui sistema de pagamentos, gestão de estoque e painel administrativo.
+                            Plataforma completa de FanPage desenvolvida com Java, Spring Boot, MongoDB e Angular.
+                            Inclui sistema de notícias, equipe e partidas.
                         </p>
                         <div class="project-tech">
                             <span class="tech-tag">Java</span>
                             <span class="tech-tag">Spring Boot</span>
-                            <span class="tech-tag">PostgreSQL</span>
-                            <span class="tech-tag">AWS</span>
+                            <span class="tech-tag">MongoDB</span>
+                            <span class="tech-tag">Angular</span>
                         </div>
-                        <a href="#" class="project-link" data-translate="project-link">Ver Projeto →</a>
+                        <a href="https://github.com/guilhermexL/corinthians" class="project-link" data-translate="project-link">Ver Projeto →</a>
                     </article>
 
                     <article class="project-card">
@@ -192,18 +191,17 @@
                     </article>
 
                     <article class="project-card">
-                        <h3 data-translate="project3-title">API de Gerenciamento de Tarefas</h3>
+                        <h3 data-translate="project3-title">Blog</h3>
                         <p data-translate="project3-description">
-                            REST API robusta para gerenciamento de tarefas com autenticação JWT,
-                            documentação Swagger e deploy automatizado via Docker.
+                            Uma aplicação full-stack para registrar atividades diárias em formato de entradas de blog. 
+                            Desenvolvida com React.js, Node.js e MongoDB.
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">Java</span>
-                            <span class="tech-tag">Spring Security</span>
+                            <span class="tech-tag">ReactJS</span>
+                            <span class="tech-tag">NodeJS</span>
                             <span class="tech-tag">MongoDB</span>
-                            <span class="tech-tag">Docker</span>
                         </div>
-                        <a href="#" class="project-link" data-translate="project-link">Ver Projeto →</a>
+                        <a href="https://github.com/guilhermexL/blog-diario" class="project-link" data-translate="project-link">Ver Projeto →</a>
                     </article>
 
                     <article class="project-card">
