feat: corrigindo traduções

--- a/index.html
+++ b/index.html
@@ -205,18 +205,16 @@
                     </article>
 
                     <article class="project-card">
-                        <h3 data-translate="project4-title">API de Gerenciamento de Tarefas</h3>
+                        <h3 data-translate="project4-title">Portfolio</h3>
                         <p data-translate="project4-description">
-                            REST API robusta para gerenciamento de tarefas com autenticação JWT,
-                            documentação Swagger e deploy automatizado via Docker.
+                            Página Web do Portfólio
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">Java</span>
-                            <span class="tech-tag">Spring Security</span>
-                            <span class="tech-tag">MongoDB</span>
-                            <span class="tech-tag">Docker</span>
+                            <span class="tech-tag">HTML</span>
+                            <span class="tech-tag">CSS</span>
+                            <span class="tech-tag">Javascript</span>
                         </div>
-                        <a href="#" class="project-link" data-translate="project-link">Ver Projeto →</a>
+                        <a href="https://guilhermexl.vercel.app/" class="project-link" data-translate="project-link">Ver Projeto →</a>
                     </article>
 
                 </div>
@@ -257,7 +255,7 @@
                     <div class="skill-category">
                         <h3 data-translate="skills-cloud">Cloud & DevOps</h3>
                         <ul class="skills-list">
-                            <li>AWS (EC2, S3, RDS)</li>
+                            <li>AWS</li>
                             <li>Docker</li>
                             <li>Kubernetes</li>
                             <li>CI/CD</li>
