--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <title data-translate="page-title">Guilherme Santos - Desenvolvedor</title>
     <meta name="description"
         content="Portfólio pessoal de Guilherme Santos, desenvolvedor especializado em Java, Spring Boot e AWS.">
-
     <!-- Google Fonts - IBM Plex Mono -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
-
     <!-- 'Linkando' Styles -->
     <link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -47,16 +45,14 @@
                         <li><a href="#education" data-translate="nav-education">Formação</a></li>
                         <li><a href="#projects" data-translate="nav-projects">Projetos</a></li>
                         <li><a href="#skills" data-translate="nav-skills">Habilidades</a></li>
-                        <li><a href="#contact" data-translate="nav-contact">Contato</a></li>
+                        <!--<li><a href="#contact" data-translate="nav-contact">Contato</a></li>-->
                         <li>
-
                             <!-- Botão de alternância de idioma -->
                              <button class="language-toggle" id="languageToggle" aria-label="Alternar idioma">
                                 <span class="lang-option active" data-lang="pt">PT</span>
                                 <span class="lang-separator">|</span>
                                 <span class="lang-option" data-lang="en">EN</span>
                             </button>
-            
                         </li>
                     </ul>
 
@@ -110,6 +106,34 @@
 
                 <div class="xp-section">
                     <h2 data-translate="xp-title">Experiência</h2>
+                </div>
+
+                <div class="projects-grid">
+
+                    <article class="education-card">
+                        <h3 data-translate="education1-title">Desenvolvedor Backend | Bolsista</h3>
+                        <p data-translate="education1-description">
+                            Projeto acadêmico no setor agro, SMARTFARM - IFPB
+                        </p>
+                        <p>Abr.2024 - Dez.2024</p>
+                    </article>
+
+                    <article class="education-card">
+                        <h3 data-translate="education1-title">Aluno Pesquisador Jr</h3>
+                        <p data-translate="education1-description">
+                            VIRTUS CC
+                        </p>
+                        <p>Jun.2024 - Jun.2025</p>
+                    </article>
+
+                    <article class="education-card">
+                        <h3 data-translate="education1-title">Técnico em Informática</h3>
+                        <p data-translate="education1-description">
+                            AGILE Tecnologia
+                        </p>
+                        <p>Mar.2023 - Out.2023</p>
+                    </article>
+
                 </div>
                  
             </div>
@@ -278,7 +302,7 @@
 
         </section>
 
-        <!-- Seção Contato --->
+        <!-- Seção Contato 
 
         <section id="contact" class="section contact">
 
@@ -326,6 +350,8 @@
             </div>
 
         </section>
+
+        --->
 
     </main>
 
