feat: atribuindo traduções ao site

--- a/index.html
+++ b/index.html
@@ -111,27 +111,19 @@
                 <div class="projects-grid">
 
                     <article class="education-card">
-                        <h3 data-translate="education1-title">Desenvolvedor Backend | Bolsista</h3>
-                        <p data-translate="education1-description">
+                        <h3 data-translate="xp-title1">Desenvolvedor Backend | Bolsista</h3>
+                        <p data-translate="xp-description1">
                             Projeto acadêmico no setor agro, SMARTFARM - IFPB
                         </p>
-                        <p>Abr.2024 - Dez.2024</p>
+                        <p data-translate="xp-since1">Abr.2024 - Dez.2024</p>
                     </article>
 
                     <article class="education-card">
-                        <h3 data-translate="education1-title">Aluno Pesquisador Jr</h3>
-                        <p data-translate="education1-description">
+                        <h3 data-translate="xp-title2">Aluno Pesquisador</h3>
+                        <p data-translate="xp-description2">
                             VIRTUS CC
                         </p>
-                        <p>Jun.2024 - Jun.2025</p>
-                    </article>
-
-                    <article class="education-card">
-                        <h3 data-translate="education1-title">Técnico em Informática</h3>
-                        <p data-translate="education1-description">
-                            AGILE Tecnologia
-                        </p>
-                        <p>Mar.2023 - Out.2023</p>
+                        <p data-translate="xp-since2">Jun.2024 - Jun.2025</p>
                     </article>
 
                 </div>
@@ -157,7 +149,7 @@
                         <p data-translate="education1-description">
                             Graduação Tecnológica no Instituto Federal da Paraíba.
                         </p>
-                        <a href="https://estudante.ifpb.edu.br/cursos/346/" class="education-link" data-translate="education-link">Grade Curricular →</a>
+                        <a href="https://estudante.ifpb.edu.br/cursos/346/" class="education-link" data-translate="education1-link">Grade Curricular →</a>
                     </article>
 
                     <article class="education-card">
@@ -165,7 +157,7 @@
                         <p data-translate="education2-description">
                             Curso Técnico focado na certificação na AWS Cloud Practitioner, fornecido pela Escola da Nuvem.
                         </p>
-                        <a href="https://escoladanuvem.org/curso-aws-fundamentos/" class="education-link" data-translate="education-link">Site →</a>
+                        <a href="https://escoladanuvem.org/curso-aws-fundamentos/" class="education-link" data-translate="education2-link">Site →</a>
                     </article>
 
                 </div>    
