feat: atribuindo traduções ao site

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         rel="stylesheet">
     <!-- 'Linkando' Styles -->
     <link rel="stylesheet" href="/css/styles.css">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./assets/favicon.jpg" type="image/x-icon">
 </head>
 
 <body>
@@ -260,6 +262,17 @@
                     </div>
 
                     <div class="skill-category">
+                        <h3 data-translate="skills-frontend">Frontend</h3>
+                        <ul class="skills-list">
+                            <li>Javascript</li>
+                            <li>Typescript</li>
+                            <li>ReactJS</li>
+                            <li>Bootstrap</li>
+                            <li>Tailwind</li>
+                        </ul>
+                    </div>
+
+                    <div class="skill-category">
                         <h3 data-translate="skills-database">Banco de Dados</h3>
                         <ul class="skills-list">
                             <li>PostgreSQL</li>
@@ -273,7 +286,6 @@
                         <ul class="skills-list">
                             <li>AWS</li>
                             <li>Docker</li>
-                            <li>Kubernetes</li>
                             <li>CI/CD</li>
                         </ul>
                     </div>
@@ -285,6 +297,7 @@
                             <li>IntelliJ IDEA</li>
                             <li>VSCode</li>
                             <li>Postman</li>
+                            <li>Vercel</li>
                         </ul>
                     </div>
 
