fix: corrigindo topic projetos

--- a/index.html
+++ b/index.html
@@ -194,18 +194,17 @@
                     </article>
 
                     <article class="project-card">
-                        <h3 data-translate="project2-title">API de Gerenciamento de Tarefas</h3>
+                        <h3 data-translate="project2-title">Prenda o Gato</h3>
                         <p data-translate="project2-description">
-                            REST API robusta para gerenciamento de tarefas com autenticação JWT,
-                            documentação Swagger e deploy automatizado via Docker.
+                            Chat Noir é um jogo de tabuleiro, conhecido por Pegue o Gato ou Prenda o Gato.
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">Java</span>
-                            <span class="tech-tag">Spring Security</span>
-                            <span class="tech-tag">MongoDB</span>
-                            <span class="tech-tag">Docker</span>
+                            <span class="tech-tag">ReactJS</span>
+                            <span class="tech-tag">NextJS</span>
+                            <span class="tech-tag">Typescript</span>
+                            <span class="tech-tag">Tailwind</span>
                         </div>
-                        <a href="#" class="project-link" data-translate="project-link">Ver Projeto →</a>
+                        <a href="https://chat-noir.vercel.app/" class="project-link" data-translate="project-link">Ver Projeto →</a>
                     </article>
 
                     <article class="project-card">
