feat: att meu porfolio

--- a/index.html
+++ b/index.html
@@ -222,16 +222,17 @@
                     </article>
 
                     <article class="project-card">
-                        <h3 data-translate="project4-title">Portfolio</h3>
+                        <h3 data-translate="project4-title">Tutor Inteligente (ChaBot)</h3>
                         <p data-translate="project4-description">
-                            Página Web do Portfólio
+                            Página que oferece serviços de tutoria para quem deseja obter a certificação AWS Cloud Practitioner.
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">Javascript</span>
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">StreamLit</span>
+                            <span class="tech-tag">PostgreSQL</span>
+                            <span class="tech-tag">Docker</span>
                         </div>
-                        <a href="https://guilhermexl.vercel.app/" class="project-link" data-translate="project-link">Ver Projeto →</a>
+                        <a href="https://github.com/guilhermexL/tutor-aws" class="project-link" data-translate="project-link">Ver Projeto →</a>
                     </article>
 
                 </div>
@@ -251,23 +252,18 @@
                 <div class="skills-grid">
 
                     <div class="skill-category">
-                        <h3 data-translate="skills-backend">Backend</h3>
+                        <h3 data-translate="skills-language">Linguagens de Programação e Frameworks</h3>
                         <ul class="skills-list">
                             <li>Java</li>
+                            <li>Python</li>
                             <li>Spring Boot</li>
-                            <li>Hibernate/JPA</li>
-                            <li>Maven/Gradle</li>
-                        </ul>
-                    </div>
-
-                    <div class="skill-category">
-                        <h3 data-translate="skills-frontend">Frontend</h3>
-                        <ul class="skills-list">
                             <li>Javascript</li>
                             <li>Typescript</li>
                             <li>ReactJS</li>
-                            <li>Bootstrap</li>
-                            <li>Tailwind</li>
+                            <li>NodeJS</li>
+                            <li>Angular</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
                         </ul>
                     </div>
 
